# Heilbronn43-K-in-KPlane

./: .gitignore  CMakeLists.txt  CMakeLists_manual_cuda.txt  CUDA_HYBRID_ROADMAP.md  CUDA_INSTALLATION.md  GPU_SETUP.md  PERFORMANCE_OPTIMIZATION.md  README.md  REFACTORING_SUMMARY.md  SOLVER_STRATEGY_GUIDE.md  benchmark.py  benchmark_graph_40.json  benchmark_results.txt  build_cycle1.bat  example_usage.py  manual_build.ps1  output-15-nodes.json  output-70-nodes.json  output-example.json  presentation_notes.md  requirements.txt  sample.json  setup.py  test_cuda_kernels.py  test_gpu.py  test_large_instances.py  test_numba.py  verify_cuda_kernel.py  verify_cupy.py  verify_module.py
build_artifacts/: build_msvc.bat  planar_cuda.exp  planar_cuda.lib
build_cycle1/: CMakeLists.txt
dev_tests/: check_cuda_path.py  compare_solvers.py  demo_system.py  fix_cupy_dll.py  test-output.json  test_all_strategies.py  test_cuda_full.py  test_new_interface.py
docs/: ARCHITECTURE_SUMMARY.md  BUILD_INSTRUCTIONS.md  CUDA_VS_FIX.md  CYCLE1_COMPLETE.md  CYCLE1_GUIDE.md  CYCLE2_COMPLETE.md  CYCLE3.5_COMPLETE.md  CYCLE3_COMPLETE.md  Develope_plan_v4  PHASE1_CHECKLIST.md  PROJECT_SUMMARY.md  QUICKSTART.md  __binding__.md  __sum__v3.md
scripts/: build_and_test.ps1  build_c1.ps1  build_c1_final.ps1  build_cycle1.ps1  build_cycle1_simple.ps1  build_cycle1_v2.ps1  build_cycle1_working.ps1  build_direct.ps1  build_direct_clean.ps1  build_final.ps1
src/: app.py  geometry.py  geometry_cuda.py  geometry_kernels.cu  solver.py  solver_cuda_strategy.py  solver_legacy_strategy.py  solver_new_strategy.py
src/LCNv1/: README.md  __init__.py  api.py  develope_plan.md  develope_plan2  develope_plan2_EN.md
src/LCNv1/core/: __init__.py  cost.py  graph.py
src/LCNv1/strategies/: __init__.py  legacy.py  new.py  numba_jit.py  register.py
src/LCNv1/tests/: test_scorer.py  test_spatial.py
src/cpp_binding/: binding.cpp
src/cuda_utils/: planar_cuda.cu  vector_ops.cu
src/old_code_backup/: cost.py  geometry_cuda.py  graph.py  scorer.py  solver_cuda_strategy.py  solver_numba_strategy.py  solver_strategy.py  spatial_index.py
tests/: test_energy.py  test_geometry.py  test_solver.py
tests/cuda_tests/: test_gpu_geometry.py  test_phase1_pipeline.py  test_spatial_hash.py  test_spatial_hash_gpu.py  test_state_management.py
